Change Java Requirement from 21 to 17 for Broader Compatibility
Closes gh-119